...
    <string name="antecedentes_defensas_bajas">Tengo alguna condición que baja las defensas</string>
    <string name="antecedentes_defensas_bajas_short">Tengo condición que baja las defensas</string>

    <string name="autodiagnostico_confirmacion">COVID19 - Ministerio de salud</string>
    <string name="autodiagnostico_confirmacion_message">Este formulario tiene carácter de declaración jurada, hacer una falsa declaración es considerada una <b>contravención grave.</b></string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="opcional">Opcional</string>
    <string name="codigo_area_mas_numeor">Código de área + Número</string>
    <string name="numero_de_telefono">Número de teléfono</string>
    <string name="tus_datos_de_contacto">Teléfono de contacto</string>
    <string name="login_pregunta_datos_personales">Para empezar necesitamos tus datos personales</string>
...
    <string name="abrir">abrir</string>
    <string name="autodiagnostico_desc">Realizá el autodiagnóstico para ayudarte a determinar los pasos a seguir según tus síntomas y factores de riesgo. Recordá que un autodiagnóstico sin síntomas asociados al COVID-19 dura 48hs, y que podés volver a realizarlo cuando lo consideres necesario.</string>
    <string name="editar_informacion">Editar información</string>

    <string name="sintomas_autodiagnostico">Autodiagnóstico</string>
    <string name="sintomas_derivado_al_sistema_de_salud">Derivado al sistema de \nSalud</string>
    <string name="sintomas_resultado_sin_sintomas">Sin síntomas</string>
    <string name="sintomas_vencimiento">Vence %1$s</string>
    <string name="sintomas_token_seguridad">Token de seguridad</string>
    <string name="sintomas_otro_autodiagnostico">Hacer otro autodiagnóstico</string>

    <!--  Pantalla Principal   -->
    <string name="h_description_circular">Podés salir \na trabajar</string>
...

    <string name="h_recommendation_no_contagioso">Recordá que sólo podés salir de tu casa para realizar compras en comercios de cercanía.</string>

    <!--  covid positivo   -->
    <string name="h_description_infectado_2">No podés estar en \ncontacto con otras \npersonas</string>
    <string name="h_recomendacion_infectado_2">Contactate con el sistema de Salud. \n%1$s : %2$s\nMientras tanto, mantené el aislamiento y\nminimizá el contacto con otras personas.</string>
    <string name="derivado_de_salud_covid_positivo">COVID-19 Positivo</string>

    <!--  en observación  -->
    <string name="derivado_de_salud_observacion">En observación</string>

    <string name="header_credencial">credencial</string>
    <string name="auto_diagnostico">Autodiagnóstico</string>
...
